test/error/MethodCallError.fu
public class Test
{
	static Test? Foo()
	{
		return null; // TODO: short method syntax constant-folds
	}

	public static bool Run()
	{
		return Foo() is Test; //ERROR: 'Foo' is 'Test', 'is Test' would always equal 'true'
	}
}
